# call-center-voice-agent-accelerator

./: .azureignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE.md  README.md  azure.yaml
.devcontainer/: devcontainer-lock.json  devcontainer.json
.github/workflows/: azure-clean.yml  azure-dev.yml  azure-template-validation.yml  codeql.yml
docs/: production-readiness.md  troubleshooting.md
hooks/: postdeploy.ps1  predeploy.ps1  preprovision.ps1
hooks/providers/: acs.postdeploy.ps1  genesys.postdeploy.ps1  infobip.postdeploy.ps1  twilio.postdeploy.ps1
infra/: main.bicep  main.parameters.json
infra/modules/: acs.bicep  aiservices.bicep  containerapp.bicep  containerregistry.bicep  identity.bicep  keyvault.bicep  roleassignments.bicep
infra/modules/monitoring/: applicationinsights.bicep  monitor.bicep
server/: .dockerignore  .env.sample  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml  server.py
server/app/: call_loop.py  call_manager.py  config_validator.py  logging_config.py  provider_registry.py
server/app/audio/: README.md
server/app/handler/: ambient_mixer.py  voicelive_media_handler.py
server/app/providers/: __init__.py
server/app/providers/acs/: __init__.py  event_handler.py  media_handler.py
server/app/providers/genesys/: __init__.py  media_handler.py  simulator.html
server/app/providers/infobip/: __init__.py  event_handler.py  media_handler.py
server/app/providers/twilio/: __init__.py  event_handler.py  media_handler.py
server/static/: audio-processor.js  index.html
