[project]
name = "voice-live-agent"
version = "0.1.0"
description = "Real-time voice agent with Azure Voice Live and ACS/Web streaming clients"
requires-python = ">=3.12"

dependencies = [
    "quart>=0.20.0",
    "websockets>=15.0.1",
    "httpx>=0.28.1",
    "python-dotenv>=1.2.2",
    "quart-cors>=0.8.0",
    "azure-core>=1.39.0",
    "azure-identity>=1.25.3",
    "aiohttp>=3.14.0",
    "openai[realtime]>=2.33.0",
    "h2>=4.3.0",
    "numpy>=1.24.0",
    "azure-ai-voicelive[aiohttp]>=1.1.0",
    "urllib3>=2.7.0",
    "pyjwt>=2.13.0",
]

[project.optional-dependencies]
acs = [
    "azure-communication-callautomation>=1.5.0",
    "azure-eventgrid>=4.22.0",
]
twilio = [
    "twilio>=9.10.0",
]
infobip = []
genesys = []

[tool.uv]